--- a/package.json
+++ b/package.json
@@ -9,13 +9,25 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@portabletext/react": "^5.0.0",
+    "@sanity/client": "^7.12.1",
+    "@sanity/image-url": "^1.2.0",
+    "@sanity/vision": "^4.14.2",
+    "mini-css-extract-plugin": "^2.9.4",
     "next": "^16.0.1",
+    "next-sanity": "^11.6.5",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "sanity": "^4.14.2",
+    "styled-components": "^6.1.19"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
-    "eslint-config-next": "16.0.1"
+    "eslint-config-next": "16.0.1",
+    "postcss": "^8.5.6",
+    "tailwindcss": "3.4.1",
+    "typescript": "5.9.3"
   },
   "description": "This is a [Next.js](https://nextjs.org) project bootstrapped with [`create-next-app`](https://nextjs.org/docs/app/api-reference/cli/create-next-app).",
   "main": "index.js",
